# tictactoe

./: .travis.yml  Cargo.toml  LICENSE  README.md
benches/: optimal.rs
src/: board.rs  game.rs  human.rs  lib.rs  main.rs  optimal.rs  player.rs  strategies.rs
