[package]
name = "tictactoe"
version = "0.1.0"
authors = ["Robin Park <robin.j.park@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tictactoelib"
path = "src/lib.rs"

[[bin]]
name = "tictactoe"
path = "src/main.rs"

[dependencies]
rand = "0.7"

[dev-dependencies]
more-asserts = "0.2.1"
criterion = "0.3"

[[bench]]
name = "optimal"
harness = false
